Final Project pt4.1: Definitive width to prevent overflow on welcome section textbox

--- a/CSS/Project 4/styles.css
+++ b/CSS/Project 4/styles.css
@@ -80,6 +80,7 @@ body{
 
 .focal-point{
     position: absolute;
+    width: 300px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -90,6 +91,7 @@ body{
     margin: -10px;
     color: white;
     font-family: 'Caveat', sans-serif;
+    overflow: hidden;
     background: url("https://pradaandpearls.com/wp-content/uploads/2020/12/graham-holtshausen-fUnfEz3VLv4-unsplash-e1607209635697.jpg");
 }
 .welcome-section h1 {
@@ -97,6 +99,7 @@ body{
     text-align: center;
     margin-top: -5vh;
     font-weight: 700;
+    text-overflow: hidden;
 }
 .welcome-section p {
     font-size: 1.5rem;
